Changed the emoji of discord begging location
Forgot to change it last time smh

--- a/config/begging.toml
+++ b/config/begging.toml
@@ -135,7 +135,7 @@ specific_quotes = [
 [[locations]]
 level = 8
 id = "DISCORD"
-emoji = "🏢"
+emoji = "📱"
 name = "pp bot fun club"
 description = "The greatest discord server"
 specific_quotes = [
