bugfix: `TomlDecodeError: Reserved escape sequence used`

--- a/config/begging.toml
+++ b/config/begging.toml
@@ -139,5 +139,5 @@ emoji = "<:uwu:872504680331227136>"
 name = "Furry Roleplay Server"
 description = "BLEACH MY EYES"
 specific_quotes = [
-    "Rawr ~x3 \*nuzzles\* pounces on you - uwu u so warm<:uwu:872504680331227136>"
+    "Rawr ~x3 \\*nuzzles\\* pounces on you - uwu u so warm<:uwu:872504680331227136>",
 ]
