--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -138,4 +138,6 @@ bot_support_role_id = 0  # The ID used to determine whether or not the user is p
 [statsd]
     host = "127.0.0.1"
     port = 8125  # This is the DataDog default, 9125 is the general statsd default
-    constant_tags.service = ""  # Put your bot name here - leave blank to disable stats collection
+
+    [statsd.constant_tags]
+        service = ""  # Put your bot name here - leave blank to disable stats collection
