--- a/config/items.example.toml
+++ b/config/items.example.toml
@@ -1,35 +1,34 @@
 [[items]]
-    id = "ITEM_ID" # The ID of the item. Must be unique for all items in the [[items]] array (UPPER_SNAKE_CASE).
-    type = "TYPE" # The type of the item (UPPER_SNAKE_CASE).
-    rarity = "COMMON" # The rarity of the item (UPPER_SNAKE_CASE).
-    emoji = 123456789 # The custom ID of the emoji associated with the item (int).
-    name = "Item name" # The name of the item (string).
+    id = "ITEM_ID"  # (UPPER_SNAKE_CASE) The ID of the item. Must be unique for all items in the [[items]] array.
+    type = "TYPE" # (UPPER_SNAKE_CASE) The type of the item.
+    rarity = "COMMON" # (UPPER_SNAKE_CASE) The rarity of the item.
+    emoji = 123456789  # (int or string) The custom ID of the emoji associated with the item.
+    name = "Item name"  # (string) The name of the item.
     description = "This is the description of the item" # The description of the item (string).
 
-    [[items.skill_requirements]] # The skill requirements of the item (array).
-        id = "SKILL_ID" # The ID of the skill required. Must be unique for all skills in the [[items.skill_requirements]] array (UPPER_SNAKE_CASE).
-        level = 69 # The level of the skill required.
+    [[items.skill_requirements]]  # (array) Represents the skill requirements for a given item.
+        id = "SKILL_ID"  # (UPPER_SNAKE_CASE) The ID of the required skill. Must be unique for all skills in the [[items.skill_requirements]] array.
+        level = 69  # (int) The level of the skill required.
 
-    [items.shop_settings] # The shop settings of the item.
-        buyable = true # Whether the item can be bought from the shop (boolean).
-        buy = 100 # The price of the item when bought from the shop (int).
-        sell = 20 # The price of the item when sold to the shop (int).
-
-        auctionable = false # If the item can be auctioned (boolean).
+    [items.shop_settings]  # Represents the shop settings. I.e. the price, if it's buyable, if it's auctionable, etc.
+        auctionable = false # (bool) Whether the item can be put up for auction.
+        buyable = true  # (bool) Whether the item can be bought from the shop.
+        buy = 100  # (int): The price of the item when bought from the shop.
+        sell = 20  # (int): The price of the item when sold to the shop.
     
-    [[items.recipe]] # The recipes of the item (array).
-        id = "REQUIRED_ITEM_ID" # The ID of an item that is required to craft this item. Must be unique for all items in the [[items.recipe]] array (UPPER_SNAKE_CASE).
-        amount = 1 # The amount of the item required to craft this item (int).
+    [[items.recipe]]  # (array) The recipes of the item.
+        id = "REQUIRED_ITEM_ID"  # The ID of an item that is required to craft this item. Must be unique for all items in the [[items.recipe]] array (UPPER_SNAKE_CASE).
+        amount = 10  # (int) The amount of the parent item required to craft said item.
     
-    [items.usage] # The usage of the item.
+    [items.usage]  # (array) the usage of an item.
 
-        [[items.usage.crafting]] # The crafting recipes involving the item (array).
-            id = "CRAFTING_ITEM_ID" # The ID of an item craftable with the item. Must be unique for all items in the [[items.usage.crafting]] array (UPPER_SNAKE_CASE).
-            amount = 69 # The amount of the item required to craft this item (int).
+        [[items.usage.crafting]]  # (array) Represents a crafting recipe involving the parent item.
+            id = "CRAFTING_ITEM_ID"  # (UPPER_SNAKE_CASE) The ID of an item craftable with the parent item. Must be unique for all items in the [[items.usage.crafting]] array.
+            amount = 69  # (int) The amount of the parent item required to craft said item.
 
-        [[items.usage.brewing]] # The brewing recipes involving the item (array).
-            id = "POTION_OR_BEVERAGE_ID" # The ID of a potion or beverage craftable with the item. Must be unique for all items in the [[items.usage.brewing]] array (UPPER_SNAKE_CASE).
-            amount = 69 # The amount of the item required to brew this potion or beverage (int).
-        
-        [[items.usage.skills]] # The skills that this item is used for (array).
-            id = "SKILL_ID" # The ID of the skill that the item is used for. Must be unique for all skills in the [[items.usage.skills]] array (UPPER_SNAKE_CASE).
+        [[items.usage.brewing]]  # (array) Represents a brewing recipe involving the parent item.
+            id = "POTION_OR_BEVERAGE_ID"  # (UPPER_SNAKE_CASE) The ID of a potion or beverage craftable with the parent item. Must be unique for all items in the [[items.usage.brewing]] array.
+            amount = 69  # (int) The amount of the parent item required to brew said potion or beverage.
+
+        [[items.usage.skills]]  # (array) Represents a skill that the parent item is used for.
+            id = "SKILL_ID"  # (UPPER_SNAKE_CASE) The ID of the skill that the parent item is used for. Must be unique for all skills in the [[items.usage.skills]] array.
