--- a/config/items/GUITAR.toml
+++ b/config/items/GUITAR.toml
@@ -6,33 +6,33 @@ name = "Extremely funky guitar"  # (string) The name of the item.
 description = "The amount of funk in this bad boy is rediculous. Play some sick tunes with this and people will surely give you money" # (string) The description of the item.
 
 # (array) Represents the skill requirements for a given item.
-[[items.skill_requirements]]
-    id = "BEGGING"  # (UPPER_SNAKE_CASE) The ID of the required skill. Must be unique for all skills in the [[items.skill_requirements]] array.
+[[skill_requirements]]
+    id = "BEGGING"  # (UPPER_SNAKE_CASE) The ID of the required skill. Must be unique for all skills in the [[skill_requirements]] array.
     level = 1  # (int) The level of the skill required.
 
 # Represents the shop settings. I.e. the price, if it's buyable, if it's auctionable, etc.
-[items.shop_settings]
+[shop_settings]
     auctionable = true # (bool) Whether the item can be put up for auction.
     buyable = false  # (bool) Whether the item can be bought from the shop.
     buy = 5000  # (int): The price of the item when bought from the shop.
     sell = 2000  # (int): The price of the item when sold to the shop.
 
 #  (array) The recipes of the item.
-[[items.recipe]]
-    id = "GUITAR"  # (string UPPER_SNAKE_CASE) The ID of an item that is required to craft this item. Must be unique for all items in the [[items.recipe]] array.
+[[recipe]]
+    id = "GUITAR"  # (string UPPER_SNAKE_CASE) The ID of an item that is required to craft this item. Must be unique for all items in the [[recipe]] array.
     amount = 10  # (int) The amount of the parent item required to craft said item.
 
 # The usage of an item.
-[items.usage]
+[usage]
 
     # (array) Represents thr crafting recipes involving the parent item.
-    [[items.usage.crafting]]
+    [[usage.crafting]]
         # None
 
     # (array) Represents the brewing recipes involving the parent item.
-    [[items.usage.brewing]]
+    [[usage.brewing]]
         # None
 
     # (array) Represents the skills that the parent item is used for.
-    [[items.usage.skills]]
+    [[usage.skills]]
         # None
