--- a/config/items/METH_PIPE.toml
+++ b/config/items/METH_PIPE.toml
@@ -6,32 +6,32 @@ name = "Item name"  # (string) The name of the item.
 description = "Some crackhead left this behind." # (string) The description of the item.
 
 # (array) Represents the skill requirements for a given item.
-[[items.skill_requirements]]
+[[skill_requirements]]
     # None
 
 # Represents the shop settings. I.e. the price, if it's buyable, if it's auctionable, etc.
-[items.shop_settings]
+[shop_settings]
     auctionable = false # (bool) Whether the item can be put up for auction.
     buyable = false  # (bool) Whether the item can be bought from the shop.
     buy = 2000  # (int): The price of the item when bought from the shop.
     sell = 750  # (int): The price of the item when sold to the shop.
 
 #  (array) The recipes of the item.
-[[items.recipe]]
+[[recipe]]
     # None
 
 # The usage of an item.
-[items.usage]
+[usage]
 
     # (array) Represents thr crafting recipes involving the parent item.
-    [[items.usage.crafting]]
+    [[usage.crafting]]
         # None
 
     # (array) Represents the brewing recipes involving the parent item.
-    [[items.usage.brewing]]
-        id = "METH_POTION"  # (UPPER_SNAKE_CASE) The ID of a potion or beverage craftable with the parent item. Must be unique for all items in the [[items.usage.brewing]] array.
+    [[usage.brewing]]
+        id = "METH_POTION"  # (UPPER_SNAKE_CASE) The ID of a potion or beverage craftable with the parent item. Must be unique for all items in the [[usage.brewing]] array.
         amount = 25  # (int) The amount of the parent item required to brew said potion or beverage.
 
     # (array) Represents the skills that the parent item is used for.
-    [[items.usage.skills]]
+    [[usage.skills]]
         # None
