--- a/config/items/METH_PIPE.toml
+++ b/config/items/METH_PIPE.toml
@@ -1,5 +1,5 @@
 id = "METH_PIPE"  # (UPPER_SNAKE_CASE) The ID of the item. Must be unique for all items in the [[items]] array.
-type = "CRAFTING REAGENT"  # (UPPER_SNAKE_CASE) The type of the item.
+type = "CRAFTING_REAGENT"  # (UPPER_SNAKE_CASE) The type of the item.
 rarity = "UNCOMMON" # (UPPER_SNAKE_CASE) The rarity of the item.
 emoji = 123456789  # (int) The custom ID of the emoji associated with the item.
 name = "Item name"  # (string) The name of the item.
