--- a/config/items/example/EXAMPLE_ITEM.toml
+++ b/config/items/example/EXAMPLE_ITEM.toml
@@ -13,14 +13,18 @@ description = "This is the description of the item" # (string) The description o
 # Represents the shop settings. I.e. the price, if it's buyable, if it's auctionable, etc.
 [shop_settings]
     auctionable = false # (bool) Whether the item can be put up for auction.
-    buyable = true  # (bool) Whether the item can be bought from the shop.
+    buyable = false  # (bool) Whether the item can be bought from the shop.
     buy = 100  # (int): The price of the item when bought from the shop.
     sell = 20  # (int): The price of the item when sold to the shop.
 
 #  (array) The recipes of the item.
 [[recipe]]
-    id = "REQUIRED_ITEM_ID"  # (string UPPER_SNAKE_CASE) The ID of an item that is required to craft this item. Must be unique for all items in the [[recipe]] array.
-    amount = 10  # (int) The amount of the parent item required to craft said item.
+    id = "METAL_GUITAR"  # (string UPPER_SNAKE_CASE) The ID of an item that is required to craft this item. Must be unique for all items in the [[recipe]] array.
+    amount = 1  # (int) The amount of the parent item required to craft said item.
+
+[[recipe]]
+    id = "METH_POTION"  # (string UPPER_SNAKE_CASE) The ID of an item that is required to craft this item. Must be unique for all items in the [[recipe]] array.
+    amount = 1  # (int) The amount of the parent item required to craft said item.
 
 # The usage of an item.
 [usage]
