--- a/config/items/CHEETOS.toml
+++ b/config/items/CHEETOS.toml
@@ -1,9 +1,9 @@
-id = "METH_PIPE"  # (UPPER_SNAKE_CASE) The ID of the item. Must be unique for all items in the [[items]] array.
+id = "CHEETOS"  # (UPPER_SNAKE_CASE) The ID of the item. Must be unique for all items in the [[items]] array.
 type = "CRAFTING_REAGENT"  # (UPPER_SNAKE_CASE) The type of the item.
-rarity = "UNCOMMON" # (UPPER_SNAKE_CASE) The rarity of the item.
-emoji = 123456789  # (int) The custom ID of the emoji associated with the item.
-name = "Item name"  # (string) The name of the item.
-description = "Some crackhead left this behind." # (string) The description of the item.
+rarity = "COMMON" # (UPPER_SNAKE_CASE) The rarity of the item.
+emoji = 880813894094974996  # (int) The custom ID of the emoji associated with the item.
+name = "bag of Flamin' Hot Cheetos"  # (string) The name of the item.
+description = "Hot as fuck, makes you constipated." # (string) The description of the item.
 
 # (array) Represents the skill requirements for a given item.
 [[skill_requirements]]
@@ -12,9 +12,9 @@ description = "Some crackhead left this behind." # (string) The description of t
 # Represents the shop settings. I.e. the price, if it's buyable, if it's auctionable, etc.
 [shop_settings]
     auctionable = false # (bool) Whether the item can be put up for auction.
-    buyable = false  # (bool) Whether the item can be bought from the shop.
-    buy = 2000  # (int): The price of the item when bought from the shop.
-    sell = 750  # (int): The price of the item when sold to the shop.
+    buyable = true  # (bool) Whether the item can be bought from the shop.
+    buy = 100  # (int): The price of the item when bought from the shop.
+    sell = 50  # (int): The price of the item when sold to the shop.
 
 #  (array) The recipes of the item.
 [[recipe]]
@@ -30,8 +30,7 @@ description = "Some crackhead left this behind." # (string) The description of t
 
     # (array) Represents the brewing recipes involving the parent item.
     [[usage.brewing]]
-        id = "METH_POTION"  # (UPPER_SNAKE_CASE) The ID of a potion or beverage craftable with the parent item. Must be unique for all items in the [[usage.brewing]] array.
-        amount = 25  # (int) The amount of the parent item required to brew said potion or beverage.
+        # None
 
     # (array) Represents the skills that the parent item is used for.
     [[usage.skills]]
