--- a/config/items/FEDORA.toml
+++ b/config/items/FEDORA.toml
@@ -1,9 +1,9 @@
-id = "METH_PIPE"  # (UPPER_SNAKE_CASE) The ID of the item. Must be unique for all items in the [[items]] array.
+id = "FEDORA"  # (UPPER_SNAKE_CASE) The ID of the item. Must be unique for all items in the [[items]] array.
 type = "CRAFTING_REAGENT"  # (UPPER_SNAKE_CASE) The type of the item.
-rarity = "UNCOMMON" # (UPPER_SNAKE_CASE) The rarity of the item.
-emoji = 123456789  # (int) The custom ID of the emoji associated with the item.
-name = "Item name"  # (string) The name of the item.
-description = "Some crackhead left this behind." # (string) The description of the item.
+rarity = "RARE" # (UPPER_SNAKE_CASE) The rarity of the item.
+emoji = 880806749614014494  # (int) The custom ID of the emoji associated with the item.
+name = "Fedora"  # (string) The name of the item.
+description = "_Tip's fedora_ M'lady😩" # (string) The description of the item.
 
 # (array) Represents the skill requirements for a given item.
 [[skill_requirements]]
@@ -13,12 +13,13 @@ description = "Some crackhead left this behind." # (string) The description of t
 [shop_settings]
     auctionable = false # (bool) Whether the item can be put up for auction.
     buyable = false  # (bool) Whether the item can be bought from the shop.
-    buy = 2000  # (int): The price of the item when bought from the shop.
-    sell = 750  # (int): The price of the item when sold to the shop.
+    buy = 100000  # (int): The price of the item when bought from the shop.
+    sell = 25000  # (int): The price of the item when sold to the shop.
 
 #  (array) The recipes of the item.
 [[recipe]]
-    # None
+    id = "CASHMERE"  # (string UPPER_SNAKE_CASE) The ID of an item that is required to craft this item. Must be unique for all items in the [[recipe]] array.
+    amount = 20  # (int) The amount of the parent item required to craft said item.
 
 # The usage of an item.
 [usage]
@@ -26,12 +27,11 @@ description = "Some crackhead left this behind." # (string) The description of t
     # (array) Represents thr crafting recipes involving the parent item.
     [[usage.crafting]]
         id = "NECKBEARD"  # (UPPER_SNAKE_CASE) The ID of an item craftable with the parent item. Must be unique for all items in the [[usage.crafting]] array.
-        amount = 69  # (int) The amount of the parent item required to craft said item.
+        amount = 1  # (int) The amount of the parent item required to craft said item.
 
     # (array) Represents the brewing recipes involving the parent item.
     [[usage.brewing]]
-        id = "METH_POTION"  # (UPPER_SNAKE_CASE) The ID of a potion or beverage craftable with the parent item. Must be unique for all items in the [[usage.brewing]] array.
-        amount = 25  # (int) The amount of the parent item required to brew said potion or beverage.
+        # None
 
     # (array) Represents the skills that the parent item is used for.
     [[usage.skills]]
